--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -103,12 +103,6 @@ LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 [AssetEditorSubsystem]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=False
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/INT_TextBased.INT_TextBased
-OpenAssetsAtExit=/Game/ThirdPerson/Inventory/S_ItemReference.S_ItemReference
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_GameManager.BP_GameManager
-OpenAssetsAtExit=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap:PersistentLevel.ThirdPersonMap
-OpenAssetsAtExit=/Game/ThirdPerson/Keypad/W_Keypad.W_Keypad
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -1658,16 +1652,16 @@ SceneComponent=
 ActorComponent=
 Object=
 Image=
-Widget=
-Visual=
+Widget="\"Object.Appearance.Background\" \"Object.Appearance.Background.TintColor\" \"Object.Appearance.Background.OutlineSettings.CornerRadii\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransformPivot\" "
+Visual="\"Object.Appearance.Background\" \"Object.Appearance.Background.TintColor\" \"Object.Appearance.Background.OutlineSettings.CornerRadii\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransformPivot\" "
 OBJ_Keypad_C="\"Object.Default.InteractText\" "
 INT_Keypad_C=
 INT_TextBased_C=
 InputMappingContext="\"Object.Mappings.Mappings.Mappings[21]\" "
 DataAsset="\"Object.Mappings.Mappings.Mappings[21]\" "
 Button="\"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.CornerRadii\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings.CornerRadii\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings.CornerRadii\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.CornerRadii\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransformPivot\" "
-ContentWidget="\"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.CornerRadii\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings.CornerRadii\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings.CornerRadii\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.CornerRadii\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransformPivot\" "
-PanelWidget="\"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.CornerRadii\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings.CornerRadii\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings.CornerRadii\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.CornerRadii\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransformPivot\" "
+ContentWidget="\"Object.Appearance.Background\" \"Object.Appearance.Background.TintColor\" \"Object.Appearance.Background.OutlineSettings.CornerRadii\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransformPivot\" "
+PanelWidget="\"Object.Appearance.Background\" \"Object.Appearance.Background.TintColor\" \"Object.Appearance.Background.OutlineSettings.CornerRadii\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransformPivot\" "
 Border="\"Object.Appearance.Background\" \"Object.Appearance.Background.TintColor\" \"Object.Appearance.Background.OutlineSettings.CornerRadii\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransformPivot\" "
 Keypad_Widget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransformPivot\" "
 UserWidget=
@@ -2780,7 +2774,7 @@ PropertyWrapper=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableG
 BP_ThirdPersonCharacter_C=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
 INT_Keypad_C=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
-SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,
+SkeletalMeshComponent=
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
 CapsuleComponent=
 K2Node_Variable=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,
@@ -2818,7 +2812,7 @@ ExponentialHeightFog=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_Vari
 EdGraph=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,
 K2Node_FunctionEntry=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
 UserDefinedStruct=UserDefinedStruct.Structure.57056AB84FF00A74CA22EE942105BD9D,
-S_ItemReference=UserDefinedStruct.Structure.57056AB84FF00A74CA22EE942105BD9D,
+S_ItemReference=
 K2Node_CallFunction=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
 AddToInventory=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
 K2Node_FunctionResult=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
@@ -2853,15 +2847,15 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Blueprints/BP_GameManager
-MRUItem1=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem2=/Game/ThirdPerson/Inventory/S_ItemReference
-MRUItem3=/Game/ThirdPerson/Blueprints/INT_TextBased
-MRUItem4=/Game/ThirdPerson/Inventory/W_Menu
-MRUItem5=/Game/ThirdPerson/Keypad/W_Keypad
+MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem1=/Game/ThirdPerson/Keypad/W_Keypad
+MRUItem2=/Game/ThirdPerson/Sounds/BP_SoundManager
+MRUItem3=/Game/ThirdPerson/Blueprints/BP_GameManager
+MRUItem4=/Game/ThirdPerson/Inventory/S_ItemReference
+MRUItem5=/Game/ThirdPerson/Blueprints/INT_TextBased
 MRUItem6=/Game/ThirdPerson/Sounds/IF_Sound
-MRUItem7=/Game/ThirdPerson/Interfaces/IF_Inventory
-MRUItem8=/Game/ThirdPerson/Sounds/BP_SoundManager
+MRUItem7=/Game/ThirdPerson/Inventory/W_Menu
+MRUItem8=/Game/ThirdPerson/Interfaces/IF_Inventory
 MRUItem9=/Game/ThirdPerson/Keypad/Images/buttons/M_ButtonEnter
 MRUItem10=/Game/ThirdPerson/Keypad/Images/buttons/M_ButtonBack
 MRUItem11=/Game/ThirdPerson/Keypad/Images/buttons/M_Button9
