--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -107,6 +107,8 @@ OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Interactives/INT_TextBased.INT_Tex
 OpenAssetsAtExit=/Game/ThirdPerson/Inventory/W_Menu.W_Menu
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_GameManager.BP_GameManager
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
+OpenAssetsAtExit=/Game/ConveyorBelt/BP_ConveyorBelt.BP_ConveyorBelt
+OpenAssetsAtExit=/Game/ThirdPerson/Sounds/BP_SoundManager.BP_SoundManager
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -1906,6 +1908,16 @@ BP_ThirdPersonCharacter2_C.Input=True
 BP_ThirdPersonCharacter2_C.WorldPartition=True
 BP_ThirdPersonCharacter2_C.Events=True
 BP_ThirdPersonCharacter2_C.Materials=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.NaniteSettings=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.RayTracing=True
+StaticMesh.Navigation=True
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraActor_0
@@ -3083,7 +3095,7 @@ SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_Var
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
 CapsuleComponent=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
 K2Node_Variable=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
-SceneComponent=
+SceneComponent=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
 BP_ThirdPersonGameMode_C=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
 INT_TextBased_C=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
 PostProcessVolume=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,
@@ -3149,6 +3161,7 @@ S_Dialogue=
 NextPhase=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
 NextPhase_9=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
 TextUI_C=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
+K2Node_CustomEvent=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -3179,26 +3192,26 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Inventory/W_Menu
-MRUItem1=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem2=/Game/ThirdPerson/Blueprints/BP_GameManager
-MRUItem3=/Game/ThirdPerson/Blueprints/Interactives/S_Dialogue
-MRUItem4=/Game/ThirdPerson/Blueprints/INT_TextBased
-MRUItem5=/Game/ThirdPerson/Blueprints/HUD/W_HUD
-MRUItem6=/Game/ThirdPerson/Widgets/Test
-MRUItem7=/Game/Characters/Keith/BPTEST
-MRUItem8=/Game/Characters/Keith/BP_ThirdPersonKeith
-MRUItem9=/Game/Characters/Keith/BP_ThirdPersonCharacter2
-MRUItem10=/Game/Characters/Keith/Character_Mesh
-MRUItem11=/Game/ThirdPerson/Blueprints/Wiring/W_Wiring
-MRUItem12=/Game/ConveyorBelt/W_ConveyorBelt
-MRUItem13=/Game/ConveyorBelt/BP_ConveyorBelt
-MRUItem14=/Game/ThirdPerson/Blueprints/Keypad/IF_Puzzle
-MRUItem15=/Game/ThirdPerson/Blueprints/Wiring/INT_Wiring
-MRUItem16=/Game/ThirdPerson/Blueprints/M_Reflect
-MRUItem17=/Game/Characters/Mannequins/Animations/Quinn/MF_Run_Fwd
-MRUItem18=/Game/Characters/Keith/Run_Forward__1_
-MRUItem19=/Game/Characters/Mannequins/Animations/ABP_Quinn
+MRUItem0=/Game/ThirdPerson/Sounds/BP_SoundManager
+MRUItem1=/Game/ThirdPerson/Interfaces/IF_Inventory
+MRUItem2=/Game/ConveyorBelt/IF_Conveyor
+MRUItem3=/Game/ConveyorBelt/BP_ConveyorBelt
+MRUItem4=/Game/ThirdPerson/Props/DESK
+MRUItem5=/Game/ThirdPerson/Inventory/W_Menu
+MRUItem6=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem7=/Game/ThirdPerson/Blueprints/BP_GameManager
+MRUItem8=/Game/ThirdPerson/Blueprints/Interactives/S_Dialogue
+MRUItem9=/Game/ThirdPerson/Blueprints/INT_TextBased
+MRUItem10=/Game/ThirdPerson/Blueprints/HUD/W_HUD
+MRUItem11=/Game/ThirdPerson/Widgets/Test
+MRUItem12=/Game/Characters/Keith/BPTEST
+MRUItem13=/Game/Characters/Keith/BP_ThirdPersonKeith
+MRUItem14=/Game/Characters/Keith/BP_ThirdPersonCharacter2
+MRUItem15=/Game/Characters/Keith/Character_Mesh
+MRUItem16=/Game/ThirdPerson/Blueprints/Wiring/W_Wiring
+MRUItem17=/Game/ConveyorBelt/W_ConveyorBelt
+MRUItem18=/Game/ThirdPerson/Blueprints/Keypad/IF_Puzzle
+MRUItem19=/Game/ThirdPerson/Blueprints/Wiring/INT_Wiring
 
 [UMGSequencerSettings SequencerSettings]
 AutoChangeMode=None
@@ -3376,6 +3389,7 @@ SphereComponent.Collision=True
 /Game/ThirdPerson/Widgets/Test.Test=1
 /Game/Characters/Keith/Character_Mesh.Character_Mesh=1
 /Game/ThirdPerson/Blueprints/Interactives/S_Dialogue.S_Dialogue=1
+/Game/ConveyorBelt/IF_Conveyor.IF_Conveyor=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3597,7 +3611,7 @@ bPromptBeforeAutoImporting=True
 bDeleteSourceFilesWithAssets=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=FBXImport
 
 [SuppressableDialogs]
 DeleteConfirmationVariable_Warning=False
