--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -90,14 +90,14 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1914,Y=1003)
+LastSize=(X=1914,Y=1040)
 LastExecutedLaunchDevice=Windows@DESKTOP-K0L41OF
 LastExecutedLaunchName=DESKTOP-K0L41OF
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 NewWindowWidth=1914
-NewWindowHeight=1003
+NewWindowHeight=1040
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 MultipleInstancePositions=(X=0,Y=0)
 
@@ -105,8 +105,13 @@ MultipleInstancePositions=(X=0,Y=0)
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=False
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/HUD/W_HUD.W_HUD
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_GameManager.BP_GameManager
+OpenAssetsAtExit=/Game/ThirdPerson/Inventory/W_Menu.W_Menu
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Interactives/INT_TextBased.INT_TextBased
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -1964,10 +1969,10 @@ SceneCaptureComponent2D="\"Object.SceneCapture.ShowFlagSettings.ShowFlagSettings
 SceneCaptureComponent="\"Object.SceneCapture.ShowFlagSettings.ShowFlagSettings[0]\" "
 SceneComponent=
 ActorComponent=
-Object="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
+Object=
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
-Widget="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
-Visual="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
+Widget=
+Visual=
 OBJ_Keypad_C="\"Object.Default.InteractText\" "
 INT_Keypad_C=
 INT_TextBased_C=
@@ -1986,7 +1991,7 @@ Character=
 Pawn=
 Test_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
-TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
+TextLayoutWidget=
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1995,7 +2000,7 @@ W_Keypad_C=
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
-BP_GameManager_C="\"Object.Default.Cutscenes\" \"Object.Default.Cutscenes.Cutscenes[0]\" \"Object.Default.Cutscenes.Cutscenes[0].Speaker_13_43A8129F4A71D4BB4098E98DD99E5B3F\" \"Object.Default.Cutscenes.Cutscenes[1]\" "
+BP_GameManager_C="\"Object.Default.Cutscenes.Cutscenes[1]\" "
 PreviewMaterial="\"Object.Lightmass.LightmassSettings\" "
 Material="\"Object.Lightmass.LightmassSettings\" "
 MaterialInterface="\"Object.Lightmass.LightmassSettings\" "
@@ -3111,14 +3116,14 @@ Advanced=False
 SceneCaptureComponent2D=
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Camera.IA_Camera,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Escape.IA_Escape,
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,
-BP_ThirdPersonCharacter_C=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
+BP_ThirdPersonCharacter_C=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,
 INT_Keypad_C=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
-SkeletalMeshComponent=
+SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,
 CapsuleComponent=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
 K2Node_Variable=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,
-SceneComponent=
+SceneComponent=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
 BP_ThirdPersonGameMode_C=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
 INT_TextBased_C=
 PostProcessVolume=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,
@@ -3149,8 +3154,8 @@ TextRenderActor=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableG
 Actor=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,
 VolumetricCloud=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,
 ExponentialHeightFog=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,
-EdGraph=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
-K2Node_FunctionEntry=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,
+EdGraph=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,
+K2Node_FunctionEntry=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,K2Node_FunctionEntry.Inputs.E26EDD024D5A841C1173529C7079B322,K2Node_FunctionEntry.Inputs.C897AFF6485FF7A028A8C5B2B5B24B14,
 UserDefinedStruct=UserDefinedStruct.Structure.57056AB84FF00A74CA22EE942105BD9D,
 S_ItemReference=
 K2Node_CallFunction=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
@@ -3219,26 +3224,26 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Inventory/W_MMenu
+MRUItem0=/Engine/EditorBlueprintResources/StandardMacros
 MRUItem1=/Game/ThirdPerson/Inventory/W_Menu
-MRUItem2=/Game/ThirdPerson/Inventory/S_ItemReference
-MRUItem3=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem4=/Game/ThirdPerson/Blueprints/HUD/W_HUD
-MRUItem5=/Game/ThirdPerson/Blueprints/TextUI
-MRUItem6=/Game/ThirdPerson/Blueprints/Interactives/S_Dialogue
-MRUItem7=/Game/ThirdPerson/Blueprints/BP_GameManager
-MRUItem8=/Game/ThirdPerson/Blueprints/Interactives/INT_TextBased
-MRUItem9=/Game/Characters/Keith/KeithTexutres/Eyes
-MRUItem10=/Game/Characters/Keith/Character_Mesh
-MRUItem11=/Game/ThirdPerson/Sounds/BP_SoundManager
-MRUItem12=/Game/ThirdPerson/Interfaces/IF_Inventory
-MRUItem13=/Game/ConveyorBelt/IF_Conveyor
-MRUItem14=/Game/ConveyorBelt/BP_ConveyorBelt
-MRUItem15=/Game/ThirdPerson/Props/DESK
-MRUItem16=/Game/ThirdPerson/Blueprints/INT_TextBased
-MRUItem17=/Game/ThirdPerson/Widgets/Test
-MRUItem18=/Game/Characters/Keith/BPTEST
-MRUItem19=/Game/Characters/Keith/BP_ThirdPersonKeith
+MRUItem2=/Game/ThirdPerson/Blueprints/Interactives/INT_TextBased
+MRUItem3=/Game/ThirdPerson/Blueprints/Interactives/S_Dialogue
+MRUItem4=/Game/ThirdPerson/Blueprints/BP_GameManager
+MRUItem5=/Game/ThirdPerson/Blueprints/HUD/W_HUD
+MRUItem6=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem7=/Game/ThirdPerson/Inventory/W_MMenu
+MRUItem8=/Game/ThirdPerson/Inventory/S_ItemReference
+MRUItem9=/Game/ThirdPerson/Blueprints/TextUI
+MRUItem10=/Game/Characters/Keith/KeithTexutres/Eyes
+MRUItem11=/Game/Characters/Keith/Character_Mesh
+MRUItem12=/Game/ThirdPerson/Sounds/BP_SoundManager
+MRUItem13=/Game/ThirdPerson/Interfaces/IF_Inventory
+MRUItem14=/Game/ConveyorBelt/IF_Conveyor
+MRUItem15=/Game/ConveyorBelt/BP_ConveyorBelt
+MRUItem16=/Game/ThirdPerson/Props/DESK
+MRUItem17=/Game/ThirdPerson/Blueprints/INT_TextBased
+MRUItem18=/Game/ThirdPerson/Widgets/Test
+MRUItem19=/Game/Characters/Keith/BPTEST
 
 [UMGSequencerSettings SequencerSettings]
 AutoChangeMode=None
@@ -3332,6 +3337,7 @@ FbxImportUI.Animation=False
 CharacterMovementComponent.Character Movement: Walking=True
 AnimSequence.ImportSettings=True
 SphereComponent.Collision=True
+K2Node_VariableSet.Variable=False
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Keypad/KeypadRender.KeypadRender=1
@@ -3419,6 +3425,7 @@ SphereComponent.Collision=True
 /Game/ConveyorBelt/IF_Conveyor.IF_Conveyor=1
 /Game/ConveyorBelt/BP_ConveyorBelt.BP_ConveyorBelt=1
 /Game/ThirdPerson/Blueprints/Interactives/INT_TextBased.INT_TextBased=1
+/Engine/EditorBlueprintResources/StandardMacros.StandardMacros=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3640,7 +3647,7 @@ bPromptBeforeAutoImporting=True
 bDeleteSourceFilesWithAssets=False
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=PIE
 
 [SuppressableDialogs]
 DeleteConfirmationVariable_Warning=False
